fix spacing

--- a/source/sass/blocks/problems.scss
+++ b/source/sass/blocks/problems.scss
@@ -54,7 +54,7 @@
 		}
 	}
 	.line-1 p:first-child {
-		margin-left: 6%;
+		margin-left: 8.7%;
 	}
 	.line-2 p:first-child {
 		margin-left: 2.3%;
